[gd_scene load_steps=4 format=3 uid="uid://dtjvu7wxx0uyv"]

[ext_resource type="Script" path="res://scripts/event_area.gd" id="1_gy3py"]
[ext_resource type="Texture2D" uid="uid://88urqbq63jw7" path="res://icon.svg" id="1_s6cer"]

[sub_resource type="SphereShape3D" id="SphereShape3D_p8oe2"]
radius = 2.0

[node name="EventArea" type="Node3D"]
script = ExtResource("1_gy3py")

[node name="Sprite3D" type="Sprite3D" parent="."]
billboard = 1
texture = ExtResource("1_s6cer")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_p8oe2")

[node name="CompletionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="CompletionTimer" to="." method="_on_completion_timer_timeout"]
